==> HexabitzPlatform/H1BR6x-Firmware/H1BR6/H1BR6_dma.c <==
#include "BOS.h"

void SetupDMAInterrupts(DMA_HandleTypeDef *hDMA,uint8_t priority){
	switch((uint32_t )hDMA->Instance){
		case (uint32_t ) DMA1_Channel1:
			HAL_NVIC_SetPriority(DMA1_Channel1_IRQn,priority,0);
			HAL_NVIC_EnableIRQ(DMA1_Channel1_IRQn);
			break;
			
		case (uint32_t ) DMA1_Channel2:
		case (uint32_t ) DMA1_Channel3:
		case (uint32_t ) DMA2_Channel1:
		case (uint32_t ) DMA2_Channel2:
			HAL_NVIC_SetPriority(DMA1_Channel2_3_IRQn,priority,0);
			HAL_NVIC_EnableIRQ(DMA1_Channel2_3_IRQn);
			break;
			
		case (uint32_t ) DMA1_Channel4:
		case (uint32_t ) DMA1_Channel5:
		case (uint32_t ) DMA1_Channel6:
		case (uint32_t ) DMA1_Channel7:
		case (uint32_t ) DMA2_Channel3:
		case (uint32_t ) DMA2_Channel4:
		case (uint32_t ) DMA2_Channel5:
			HAL_NVIC_SetPriority(DMA1_Ch4_7_DMA2_Ch1_5_DMAMUX1_OVR_IRQn,priority,0);
			HAL_NVIC_EnableIRQ(DMA1_Ch4_7_DMA2_Ch1_5_DMAMUX1_OVR_IRQn);
			break;
			
		default:
			break;
	}
}

void UnSetupDMAInterrupts(DMA_HandleTypeDef *hDMA){
	switch((uint32_t )hDMA->Instance){
		case (uint32_t ) DMA1_Channel1:
			//HAL_NVIC_DisableIRQ(DMA1_Ch1_IRQn);
			HAL_NVIC_DisableIRQ(DMA1_Channel1_IRQn);
			break;
			
		case (uint32_t ) DMA1_Channel2:
		case (uint32_t ) DMA1_Channel3:
		case (uint32_t ) DMA2_Channel1:
		case (uint32_t ) DMA2_Channel2:
			HAL_NVIC_DisableIRQ(DMA1_Channel2_3_IRQn);
			break;
			
		case (uint32_t ) DMA1_Channel4:
		case (uint32_t ) DMA1_Channel5:
		case (uint32_t ) DMA1_Channel6:
		case (uint32_t ) DMA1_Channel7:
		case (uint32_t ) DMA2_Channel3:
		case (uint32_t ) DMA2_Channel4:
		case (uint32_t ) DMA2_Channel5:
			HAL_NVIC_DisableIRQ(DMA1_Ch4_7_DMA2_Ch1_5_DMAMUX1_OVR_IRQn);
			break;
			
		default:
			break;
	}
}

void RemapAndLinkDMAtoUARTRx(UART_HandleTypeDef *huart,DMA_HandleTypeDef *hDMA){
	// USART 1
	if(huart->Instance == USART1 && hDMA->Instance == DMA1_Channel1){
		//__HAL_DMA1_REMAP(HAL_DMA1_CH1_USART1_RX);
		LL_DMAMUX_SetRequestID(&DMAMUXRx[0],LL_DMAMUX_CHANNEL_0, LL_DMAMUX_REQ_USART1_RX);
	}

		// USART 2

	else if(huart->Instance == USART2 && hDMA->Instance == DMA1_Channel2){
		//__HAL_DMA1_REMAP(HAL_DMA1_CH1_USART2_RX);
		LL_DMAMUX_SetRequestID(&DMAMUXRx[1],LL_DMAMUX_CHANNEL_1, LL_DMAMUX_REQ_USART2_RX);
	}

	// USART 3
	else if(huart->Instance == USART3 && hDMA->Instance == DMA1_Channel3){
		//__HAL_DMA1_REMAP(HAL_DMA1_CH1_USART3_RX);
		LL_DMAMUX_SetRequestID(&DMAMUXRx[2],LL_DMAMUX_CHANNEL_2, LL_DMAMUX_REQ_USART3_RX);
	}

	// USART 4
	else if(huart->Instance == USART4 && hDMA->Instance == DMA1_Channel4){
		//__HAL_DMA1_REMAP(HAL_DMA1_CH1_USART4_RX);
		LL_DMAMUX_SetRequestID(&DMAMUXRx[3],LL_DMAMUX_CHANNEL_3, LL_DMAMUX_REQ_USART4_RX);
	}

	// USART 5
	else if(huart->Instance == USART5 && hDMA->Instance == DMA1_Channel5){
		//__HAL_DMA1_REMAP(HAL_DMA1_CH1_USART5_RX);
		LL_DMAMUX_SetRequestID(&DMAMUXRx[4],LL_DMAMUX_CHANNEL_4, LL_DMAMUX_REQ_USART5_RX);
	}

	// USART 6
	else if(huart->Instance == USART6 && hDMA->Instance == DMA1_Channel6){
		//__HAL_DMA1_REMAP(HAL_DMA1_CH1_USART6_RX);
		LL_DMAMUX_SetRequestID(&DMAMUXRx[5],LL_DMAMUX_CHANNEL_5, LL_DMAMUX_REQ_USART6_RX);
	}


	__HAL_LINKDMA(huart,hdmarx,*hDMA);
}

void RemapAndLinkDMAtoUARTTx(UART_HandleTypeDef *huart,DMA_HandleTypeDef *hDMA){
	// USART 1
	if(huart->Instance == USART1 && hDMA->Instance == DMA1_Channel2){
	//	__HAL_DMA1_REMAP(HAL_DMA1_CH2_USART1_TX);
		LL_DMAMUX_SetRequestID(&DMAMUXTx[0],LL_DMAMUX_CHANNEL_1, LL_DMAMUX_REQ_USART1_TX);
	}

	// USART 2
	else if(huart->Instance == USART2 && hDMA->Instance == DMA1_Channel4){
		//__HAL_DMA1_REMAP(HAL_DMA1_CH2_USART2_TX);
		LL_DMAMUX_SetRequestID(&DMAMUXTx[1],LL_DMAMUX_CHANNEL_3, LL_DMAMUX_REQ_USART2_TX);
	}

	// USART 3
	else if(huart->Instance == USART3 && hDMA->Instance == DMA1_Channel6){
		//__HAL_DMA1_REMAP(HAL_DMA1_CH2_USART3_TX);
		LL_DMAMUX_SetRequestID(&DMAMUXTx[2],LL_DMAMUX_CHANNEL_5, LL_DMAMUX_REQ_USART3_TX);
	}

	// USART 4
	else if(huart->Instance == USART4 && hDMA->Instance == DMA2_Channel1){
		//__HAL_DMA1_REMAP(HAL_DMA1_CH2_USART4_TX);
		LL_DMAMUX_SetRequestID(&DMAMUXTx[3],LL_DMAMUX_CHANNEL_7, LL_DMAMUX_REQ_USART4_TX);
	}

	// USART 5
	else if(huart->Instance == USART5 && hDMA->Instance == DMA2_Channel3){
		//__HAL_DMA1_REMAP(HAL_DMA1_CH2_USART5_TX);
		LL_DMAMUX_SetRequestID(&DMAMUXTx[4],LL_DMAMUX_CHANNEL_9, LL_DMAMUX_REQ_USART5_TX);
	}
    // USART 6
	else if(huart->Instance == USART6 && hDMA->Instance == DMA2_Channel5){
		//__HAL_DMA1_REMAP(HAL_DMA1_CH2_USART6_TX);
		LL_DMAMUX_SetRequestID(&DMAMUXTx[5],LL_DMAMUX_CHANNEL_11, LL_DMAMUX_REQ_USART6_TX);
	}


	__HAL_LINKDMA(huart,hdmatx,*hDMA);
}
